--- a/css/sliding-footer.css
+++ b/css/sliding-footer.css
@@ -1,18 +1,26 @@
 .fixed-footer.show-footer {
 	transition: min-height .25s ease-in-out;
 	min-height: 1em;
-	height: 120px;
+/* 	height: 100px; */
+	padding-bottom: 2em;
+	position: relative;
 }
 
 .fixed-footer.show-footer.expanded {
 	min-height: 100%;
 }
 
+
+.fixed-footer .tekserve-studio-sliding-footer-top {
+	max-width: 70%;
+	margin-bottom: .5em;
+}
+
 .fixed-footer .tekserve-studio-sliding-footer-bottom {
 	text-align: center;
 	position: absolute;
     width: 100%;
-    margin-top: 50%;
+    margin-top: 20%;
 }
 
 .fixed-footer .tekserve-studio-sliding-footer-bottom-content {
@@ -29,8 +37,22 @@
 .fixed-footer .tekserve-studio-sliding-footer-buttons {
 	max-width: 25%;
 	display: inline-block;
-	float: right;
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	top: auto;
 	cursor: pointer;
+}
+
+.fixed-footer.show-footer.expanded .tekserve-studio-sliding-footer-buttons {
+	bottom: auto;
+	top: 1em;
+	right: 1em;
+}
+
+.tekserve-studio-sliding-footer-close {
+  display: inline-block;
+  margin-left: 1em;
 }
 
 .sliding-footer-trigger {
@@ -45,4 +67,59 @@
 
 .expanded .sliding-footer-trigger:after {
 	content: '\f078';
+}
+
+@media (max-width: 1024px) {
+
+	.fixed-footer .tekserve-studio-sliding-footer-buttons {
+		max-width: 50%;
+	}
+
+	.fixed-footer.show-footer.expanded .tekserve-studio-sliding-footer-buttons {
+		position: relative;
+		text-align: right;
+		max-width: 100%;
+	}
+	
+	.tekserve-studio .footer .fixed-footer.show-footer .tekserve-studio-sliding-footer-top {
+		max-width: 50%;
+		margin-bottom: 0;
+		text-align: left;
+	}
+
+}
+
+@media (max-width: 500px) {
+
+	.fixed-footer .tekserve-studio-sliding-footer-buttons {
+		max-width: 100%;
+		margin: .5em auto 0;
+		position: relative; 
+	}
+	
+	.fixed-footer.expanded .tekserve-studio-sliding-footer-bottom {
+		left: 0;
+		margin-top: 1em;
+	}
+	
+	.fixed-footer .tekserve-studio-sliding-footer-buttons .tekserve-studio-sliding-footer-close {
+		position: absolute;
+		top: -5em;
+		left: -1em;
+	}
+	
+	.fixed-footer.expanded .tekserve-studio-sliding-footer-buttons .tekserve-studio-sliding-footer-close {
+		position: relative;
+		top: 0;
+		left: 0;
+	}
+	
+	.tekserve-studio .footer .fixed-footer.show-footer .button-expand {
+		margin: 0;
+	}
+	
+	.tekserve-studio .footer .fixed-footer.show-footer .tekserve-studio-sliding-footer-top {
+		max-width: 100%;
+	}
+
 }
