--- a/css/simple-footer.css
+++ b/css/simple-footer.css
@@ -58,6 +58,10 @@
 	font-weight: 200;
 }
 
+input#mc_mv_EMAIL {
+  text-transform: none;
+}
+
 @media (min-width: 1400px) {
 
 	.fixed-footer .tekserve-studio-simple-footer-left {
