--- a/style.css
+++ b/style.css
@@ -281,6 +281,42 @@ body.tekserve-studio {
 
 
 
+/*** Upcoming Events ***/
+
+.tekserve-studio-tribe-events .tribe-events-photo-event-wrap {
+	max-width: 300px;
+	text-align: left;
+}
+
+.tekserve-studio-tribe-events .entry-title {
+	font-size: 20px;
+}
+
+.tekserve-studio-tribe-events .tribe-events-event-meta {
+	margin-bottom: .5em;
+}
+
+.tekserve-studio-tribe-events .time-details {
+	font-size: 14px;
+	font-weight: 600;
+}
+
+.tekserve-studio-tribe-events .tribe-events-list-photo-description {
+  font-size: 14px;
+}
+
+@media (max-width: 991px) {
+
+	.tekserve-studio-tribe-events .tribe-events-photo-event-wrap {
+		max-width: 100%;
+		margin-bottom: 2em;
+		text-align: center;
+	}
+
+}
+
+
+
 /*** Footer ***/
 
 .tekserve-studio .footer {
@@ -384,6 +420,10 @@ body.tekserve-studio {
 	.tekserve-studio.page .content article [class*='col-'] {
 		text-align: left;
 	}
+	
+	.tekserve-studio.page .content article [class*='col-'] {
+		margin-bottom: 1em;
+	}
 
 }
 
@@ -404,6 +444,12 @@ body.tekserve-studio {
 		text-align: left;
 		margin-left: 0;
 		margin-right: 0;
+		padding-left: 0;
+	}
+	
+	.tekserve-studio .category-title:after {
+		padding-top: .5em;
+		margin-bottom: 0;
 	}
 	
 	.tekserve-studio h2 {
